zoom slider styling

--- a/src/colors.css
+++ b/src/colors.css
@@ -5,7 +5,7 @@
 	--fill-dark-blue: #1c2a35;
 	--fill-med-blue: #3c5165;
 	--fill-light-blue: #5e778e;
-	--fill-dark-gray: #3e3e3e;
+	--fill-dark-gray: #1d1d1d;
 
 	--outline-gray: #777;
 	--outline-blue: #d2d3e8;
