--- a/src/sharedStyle.css
+++ b/src/sharedStyle.css
@@ -1,6 +1,7 @@
 button,
 input,
 ::-webkit-scrollbar-thumb,
+input[type=range]::-webkit-slider-thumb,
 .interactable {
 	border: 1px solid var(--outline-gray);
 	background: var(--fill-dark-blue);
@@ -14,6 +15,7 @@ input,
 button:hover,
 input:hover,
 ::-webkit-scrollbar-thumb:hover,
+input[type=range]::-webkit-slider-thumb:hover,
 .interactable:hover {
 	background: var(--fill-med-blue);
 }
@@ -21,22 +23,36 @@ input:hover,
 button:active,
 input.active,
 ::-webkit-scrollbar-thumb:active,
+input[type=range]::-webkit-slider-thumb:active,
 .interactable.selected,
 :checked + .interactable {
 	background: var(--fill-light-blue);
 }
 
-:focus {
+:focus,
+input[type=range]:focus {
 	outline: none;
 	border: 1px solid var(--primary);
 }
 
 ::-webkit-scrollbar {
-	background: var(--back);
+	background: var(--fill-dark-gray);
 	border: 1px solid var(--outline-gray);
 	width: 12px;
 }
 
 input {
 	padding: 3px;
+}
+
+input[type=range] {
+	-webkit-appearance: none;
+	padding: 0;
+	background: var(--fill-dark-gray);
+}
+
+input[type=range]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	width: 10px;
+	height: 10px;
 }
