--- a/src/sharedStyle.css
+++ b/src/sharedStyle.css
@@ -39,6 +39,7 @@ input[type=range]:focus {
 	background: var(--fill-dark-gray);
 	border: 1px solid var(--outline-gray);
 	width: 12px;
+	height: 12px;
 }
 
 input {
